More with @ViewChild

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-rooms></app-rooms>
+<!-- <app-rooms></app-rooms> -->
+<!-- one more use case2 for @ViewChild
+      we can initialize the view mean to say rendering the template from .ts file
+      and we can access the properties of any component. So use below code -->
+<div>
+  <ng-template #user></ng-template>
+</div>
