--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,8 @@
 <div>
   <ng-template #user></ng-template>
 </div>
+<app-container>
+  <app-rooms></app-rooms>
+  <app-employee></app-employee>
+  this is from ng-content
+</app-container>
